force-app/main/default/objects/Case/fields/Customer_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in your Satisfaction Survey component before case creation.</description>
    <label>Customer Satisfied</label>
    <type>Checkbox</type>
</CustomField>