force-app/main/default/objects/Case/fields/First_Response_Due__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Due__c</fullName>
    <description>SLA tracking.</description>
    <label>First Response Due</label>
    <type>DateTime</type>
</CustomField>