force-app/main/default/objects/Case/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware Issue</fullName>
            </value>
            <value>
                <fullName>Software Issue</fullName>
            </value>
            <value>
                <fullName>Installation Issue</fullName>
            </value>
            <value>
                <fullName>Warranty Claim</fullName>
            </value>
            <value>
                <fullName>Replacement Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>