force-app/main/default/objects/Case/fields/Resolution_Due__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Due__c</fullName>
    <description>Case deadline.</description>
    <label>Resolution Due</label>
    <type>DateTime</type>
</CustomField>