force-app/main/default/objects/Case/fields/SLA_Type__c.field-meta.xml
<CustomField>
    <fullName>SLA_Type__c</fullName>
    <label>SLA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>