force-app/main/default/objects/Case/fields/Tracking_OTP_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Tracking_OTP_Attempts__c</fullName>
    <label>Tracking OTP Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>