force-app/main/default/objects/Case/fields/Tracking_OTP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Tracking_OTP_Expiry__c</fullName>
    <label>Tracking OTP Expiry</label>
    <type>DateTime</type>
</CustomField>