force-app/main/default/objects/Case/fields/Tracking_OTP_Hash__c.field-meta.xml
<CustomField>
    <fullName>Tracking_OTP_Hash__c</fullName>
    <label>Tracking OTP Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>