force-app/main/default/objects/Case/fields/Tracking_OTP_LastSent__c.field-meta.xml
<CustomField>
    <fullName>Tracking_OTP_LastSent__c</fullName>
    <label>Tracking OTP Last Sent</label>
    <type>DateTime</type>
</CustomField>