force-app/main/default/objects/Case/fields/Tracking_Public_Stage__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Public_Stage__c</fullName>
    <label>Tracking Public Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Received</fullName>
                <default>true</default>
                <label>Request Received</label>
            </value>
            <value>
                <fullName>Case Review Started</fullName>
            </value>
            <value>
                <fullName>Investigation in Progress</fullName>
            </value>
            <value>
                <fullName>Resolution in Progress</fullName>
            </value>
            <value>
                <fullName>Case Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>