force-app/main/default/objects/Case/fields/Tracking_Public_Update__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Public_Update__c</fullName>
    <label>Tracking Public Update</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>