force-app/main/default/objects/Case/fields/Tracking_Public_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Public_Update_Time__c</fullName>
    <label>Tracking Public Update Time</label>
    <type>DateTime</type>
</CustomField>