force-app/main/default/objects/Case/recordTypes/Warranty_Support.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Support</fullName>
    <active>true</active>
    <businessProcess>ElectroMart Support Process</businessProcess>
    <description>Handles warranty claims and replacement requests</description>
    <label>Warranty Support</label>
</RecordType>