force-app/main/default/objects/Case/listViews/Laptop_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Laptop_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Laptop Support Queue</label>
    <queue>Laptop_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>