force-app/main/default/objects/Case/listViews/Mobile_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Mobile_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Mobile Support Queue</label>
    <queue>Mobile_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>