force-app/main/default/objects/Case/listViews/Senior_Escalation_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Senior_Escalation_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Senior Escalation Queue</label>
    <queue>Senior_Escalation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>