force-app/main/default/objects/Case/listViews/Technical_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Technical_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical Support Queue</label>
    <queue>Technical_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>