force-app/main/default/objects/Case/listViews/Testing_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Testing_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Testing Queue</label>
    <queue>Testing_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>